--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -11,8 +11,7 @@
         </div>
         <div>
             <br>
-            Your authcode:
-            {{ auth }}
+            <a href="/user/{{ username }}">{{ username }}</a>
             <br>
             <a href="/logout">Logout</a>
             <br>
