--- a/src/templates/wiki.html
+++ b/src/templates/wiki.html
@@ -11,12 +11,33 @@
     </head>
     <body width: 100%; height: 100%;>
         <div style="text-align:center; background-color:powderblue; position:fixed;">
-            <p style="color:black" ><b>KnowWay!</b></p>
-            {{ username }}
-            <br>
-            <p id="points">wait a bit...</p>
-            <a href="/main">Back</a>
+            <div>
+                <p style="color:black" ><b>KnowWay!</b></p>
+                {{ username }}
+                <br>
+                <p id="points">wait a bit...</p>
+                <a href="/main">Back</a>
+            </div>
+            <div>
+                <form action="" method="post" novalidate>
+                    {{ formAddComment.hidden_tag() }}
+                    <p>
+                        {{ formAddComment.content.label }}<br>
+                        {{ formAddComment.content(size=100) }}
+                    </p>
+                    <p>{{ formAddComment.submit() }}</p>
+                </form>
+            </div>
+            <div style="width: 144px; overflow-x: hidden; overflow-y: scroll; text-align: left;" >
+                {% for c in comments %}
+                    <hr>
+                    <b>{{c[0]}}</b>:
+                    <br>
+                    {{c[1]}}
+                {% endfor %}
+            </div>
         </div>
+
         <div>
             <br>
                 <div id="content" class="mw-body" role="main">
