--- a/src/templates/polona.html
+++ b/src/templates/polona.html
@@ -4,12 +4,8 @@
         <title>{{ title }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='app.js') }}" type = "text/javascript"></script>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/wikipedia.css')}}">
-        <link rel="stylesheet"
-        href="//en.wikipedia.org/w/load.php?debug=false&lang=en&modules=mediawiki.legacy.commonPrint,shared|skins.vector.styles&only=styles&skin=vector&*">
-        
     </head>
-    <body width: 100%; height: 100%;>
+    <body>
         <div style="text-align:center; background-color:powderblue; position:fixed;">
             <div>
                 <p style="color:black" ><b>KnowWay!</b></p>
@@ -38,14 +34,13 @@
             </div>
         </div>
 
-        <div>
-            <br>
-                <div id="content" class="mw-body" role="main">
-                {% block body %}
-                {{ sourceHTML }}
-                {% endblock %}
-                </div>
+        <div style="left: 144px; max-width: 100%; max-height: 100%; ">
+            <img src="{{imgsrc}}" alt="{{url_for('static', filename='no_image.png')}}" style="max-width: 100%; max-height: 100%; object-fit: contain;"></img>
         </div>
-        
+
+        <a href="{{url}}&page={{prevpage}}">Previous</a>      <a href="{{url}}&page={{nextpage}}">Next</a>
+        {% for i in range(pages) %}
+            <a href="{{url}}&page={{i}}">{{i}}</a> 
+        {% endfor %}
     </body>
 </html>
