--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,9 +1,15 @@
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}">
         <title>{{ title }}</title>
     </head>
     <body>
-        <a href="/register">Register</a>
-        <a href="/login">Login</a>
+        <div class="container">
+            <div class="signbox">
+            <a href="/register">Register</a>
+            <br>
+            <a href="/login">Login</a>
+            </div>
+        </div>
     </body>
 </html>
