--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -3,6 +3,7 @@
         <title>{{ title }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/wikipedia.css')}}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}">
         
     </head>
     <body width: 100%; height: 100%;>
@@ -10,32 +11,54 @@
         <p style="color:black" ><b>KnowWay!</b></p>
         </div>
         <div>
-            <br>
             <a href="/user/{{ username }}">{{ username }}</a>
             <br>
             <a href="/logout">Logout</a>
+        </div>
+        <div class="container">
+            <div class="resbox">
+                <div class="wikibox">
+                    <p style="font-size: larger;">Wikipedia</p>
+                    <a href="/wiki">Random article</a>
+                    <p style="color: red;">{{ error }}</p>
+                    <form action="" method="post" novalidate>
+                        {{ formFindWikipedia.hidden_tag() }}
+                        <p>
+                            {{ formFindWikipedia.searchWiki.label }}<br>
+                            {{ formFindWikipedia.searchWiki(size=32) }}
+                        </p>
+                        <p>{{ formFindWikipedia.submit() }}</p>
+                    </form>
+                    Recommended:<br>
+                    {% for r in wikiRecommended %}
+                        {% if r[2]>0 %}
+                        <a href="{{r[0]}}">{{r[1] | replace('+', ' ')}}</a> - {{r[2]}} views <br>
+                        {% endif %}
+                    {% endfor%}
+                    <br>
+                </div>
+            </div>
             <br>
-            <p style="font-size: larger;">Wikipedia</p>
-            <a href="/wiki">Random article</a>
-            <p style="color: red;">{{ error }}</p>
-            <form action="" method="post" novalidate>
-                {{ formFindWikipedia.hidden_tag() }}
-                <p>
-                    {{ formFindWikipedia.searchWiki.label }}<br>
-                    {{ formFindWikipedia.searchWiki(size=32) }}
-                </p>
-                <p>{{ formFindWikipedia.submit() }}</p>
-            </form>
-            <br>
-            <p style="font-size: larger;">Polona</p>
-            <form action="" method="post" novalidate>
-                {{ formFindPolona.hidden_tag() }}
-                <p>
-                    {{ formFindPolona.searchPolona.label }}<br>
-                    {{ formFindPolona.searchPolona(size=32) }}
-                </p>
-                <p>{{ formFindPolona.submit() }}</p>
-            </form>
+            <div class="resbox">
+                <div class="polonabox">
+                    <p style="font-size: larger;">Polona</p>
+                    <form action="" method="post" novalidate>
+                        {{ formFindPolona.hidden_tag() }}
+                        <p>
+                            {{ formFindPolona.searchPolona.label }}<br>
+                            {{ formFindPolona.searchPolona(size=32) }}
+                        </p>
+                        <p>{{ formFindPolona.submit() }}</p>
+                    </form>
+                    Recommended:<br>
+                    {% for r in polonaRecommended %}
+                        {% if r[2]>0 %}
+                            <a href="{{r[0]}}">{{r[1]| replace('-', ' ')}}</a> - {{r[2]}} views <br>
+                        {% endif %}
+                    {% endfor%}
+                    <br>
+                </div>
+            </div>
         </div>
     </body>
 </html>
