--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,19 +1,32 @@
-<h1>Register</h1>
-<a href="\index">Back</a>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}
-        </p>
-        <p>
-            {{ form.password2.label }}<br>
-            {{ form.password2(size=32) }}
-        </p>
-        <p>{{ form.submit() }}</p>
-        <p style="color: red;">{{ error }}</p>
-    </form>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}">
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="signbox">
+            <h1>Register</h1>
+            <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+                <p>
+                    {{ form.username.label }}<br>
+                    {{ form.username(size=32) }}
+                </p>
+                <p>
+                    {{ form.password.label }}<br>
+                    {{ form.password(size=32) }}
+                </p>
+                <p>
+                    {{ form.password2.label }}<br>
+                    {{ form.password2(size=32) }}
+                </p>
+                <p>{{ form.submit() }}</p>
+                <p style="color: red;">{{ error }}</p>
+            </form>
+            <a href="\index">Back</a>
+        </div>
+    </div>
+</body>
+</html>
