--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,9 +6,11 @@
     <body>
         <div class="container">
             <div class="signbox">
-            <a href="/register">Register</a>
-            <br>
-            <a href="/login">Login</a>
+                <div class="menu">
+                    <a href="/register">Register</a>
+                    <br>
+                    <a href="/login">Login</a>
+                </div>
             </div>
         </div>
     </body>
