--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -10,12 +10,15 @@
         <div style="text-align:center; background-color:powderblue;">
         <p style="color:black" ><b>KnowWay!</b></p>
         </div>
-        <div>
-            <a href="/user/{{ username }}">{{ username }}</a>
-            <br>
-            <a href="/logout">Logout</a>
-        </div>
+
         <div class="container">
+            <div>
+                <a href="/user/{{ username }}">{{ username }}</a>
+                <br>
+                <a href="/ranking">Ranking</a>
+                <br>
+                <a href="/logout">Logout</a>
+            </div>
             <div class="resbox">
                 <div class="wikibox">
                     <p style="font-size: larger;">Wikipedia</p>
