--- a/src/templates/polona.html
+++ b/src/templates/polona.html
@@ -4,9 +4,10 @@
         <title>{{ title }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='app.js') }}" type = "text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}">
     </head>
     <body>
-        <div style="text-align:center; background-color:powderblue; position:fixed;">
+        <div class="commentbox">
             <div>
                 <p style="color:black" ><b>KnowWay!</b></p>
                 {{ username }}
