--- a/src/templates/wiki.html
+++ b/src/templates/wiki.html
@@ -4,13 +4,14 @@
         <title>{{ title }}</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='app.js') }}" type = "text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css')}}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/wikipedia.css')}}">
         <link rel="stylesheet"
         href="//en.wikipedia.org/w/load.php?debug=false&lang=en&modules=mediawiki.legacy.commonPrint,shared|skins.vector.styles&only=styles&skin=vector&*">
         
     </head>
     <body width: 100%; height: 100%;>
-        <div style="text-align:center; background-color:powderblue; position:fixed;">
+        <div class="commentbox">
             <div>
                 <p style="color:black" ><b>KnowWay!</b></p>
                 {{ username }}
